Create new parent pom and merge hakemuseditori and omatsivut Virkailija-url override for IT tests.